# chaos-engineering-rs

./: .gitignore  CHANGES.md  Cargo.toml  GITHUB_INFO.md  LICENSE-MIT  QUICKSTART.md  README.md  SECURITY.md
chaos_cli/: Cargo.toml
chaos_cli/src/: main.rs  ui.rs
chaos_cli/src/commands/: attach.rs  list.rs  mod.rs  report.rs  run.rs  serve.rs  validate.rs
chaos_core/: Cargo.toml
chaos_core/src/: error.rs  executor.rs  handle.rs  lib.rs  target.rs
chaos_core/src/injectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
chaos_metrics/: Cargo.toml
chaos_metrics/src/: aggregator.rs  collector.rs  lib.rs  slo.rs
chaos_metrics/src/exporters/: json.rs  markdown.rs  mod.rs  prometheus.rs
chaos_scenarios/: Cargo.toml
chaos_scenarios/src/: config.rs  lib.rs  parser.rs  phase.rs  runner.rs  scheduler.rs
chaos_targets/: Cargo.toml
chaos_targets/src/: common.rs  lib.rs
chaos_web/: Cargo.toml
chaos_web/src/: api.rs  handlers.rs  lib.rs  load_test.rs  state.rs  templates.rs
scenarios/: quick_test.yaml  stress_test.yaml
scripts/: RUN_AS_ADMIN.bat  RUN_AS_ADMIN.ps1  simple_test.ps1  stress_test.ps1  stress_test.ps1.bak
